--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build": "webpack --mode production --config config/webpack.prod.js --env.PLATFORM=production --env.VERSION=stag --progress"
     },
     "dependencies": {
-        "bootstrap": "^4.4.1",
-        "mdbreact": "^4.25.1",
+        "@material-ui/core": "^4.9.2",
+        "@material-ui/icons": "^4.9.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router": "^5.1.2",
@@ -26,14 +26,16 @@
         "@babel/preset-react": "^7.8.3",
         "babel-core": "7.0.0-bridge.0",
         "babel-loader": "^8.0.6",
-        "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-loader": "^3.0.3",
         "html-webpack-plugin": "^3.2.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "style-loader": "^1.1.3",
+        "svg-inline-loader": "^0.8.0",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.41.6",
         "webpack-cli": "^3.3.11",
@@ -41,4 +43,4 @@
         "webpack-merge": "^4.2.2",
         "webpack-visualizer-plugin": "^0.1.11"
     }
-  }
+}
